fix: restaurant name being covered by nav.

--- a/css/styles.css
+++ b/css/styles.css
@@ -337,7 +337,7 @@ nav h1 a {
 
 @media screen and (min-width: 225px) {
   #restaurant-name, #map-name {
-    margin-top: 2em;
+    margin-top: 3.25em;
   }
 }
 
